Fix header spacing, change login buttons

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -8,27 +8,39 @@
   left: 0;
   right: 0;
   margin-top: 25px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   margin-left: auto;
   margin-right: auto;
 }
 .back-link {
-  margin-top: 75px;
+  margin-top: 80px;
+  white-space: nowrap
 }
 .has-header {
-  top: 110px;
+  top: 120px;
 }
 .bar {
-  height: 110px;
+  height: 120px;
 }
-.button.button-schedu {
+.button.button-schedu,
+.button.button-schedu-outline.activated  {
  border-color: #215127;
  background-color: #215127;
  color: #fff;
 }
+.button.button-schedu-outline,
+.button.button-schedu.activated {
+  border-color: #215127;
+  background-color: #fff;
+  color: #000;
+}
+.button.button-schedu-outline.activated,
+.button.button-schedu.activated {
+  box-shadow: inset 3px 3px 10px rgba(0,0,0,0.3);
+}
 .list-page-heading {
-  padding-top: 0;
-  padding-bottom: 0;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 .list-page-heading h3 {
   font-size: 1.5em;
@@ -69,7 +81,8 @@
  * Schedule Page
  */
 .date-header {
-  height: 35px;
+  padding: 10px;
+  height: 45px;
 }
 .class-list .schedule-item {
   padding-top: 10px;
